Read and write all load balancers on construction